<resources>
    <string name="app_name">lost n found</string>

    <string name="btn_lost">Lost</string>
    <string name="btn_found">Found</string>

    <string name="title_lost">Kehilangan barang</string>
    <string name="title_found">Menemukan barang</string>
    <string name="label_nama_brg">Nama Barang</string>
    <string name="label_lokasi_lost">Lokasi Terakhir Dilihat</string>
    <string name="label_lokasi_found">Lokasi Ditemukan</string>
    <string name="label_waktu">Waktu</string>
    <string name="label_deskripsi">Deskripsi</string>
    <string name="ket_deskripsi">(Silakan cantumkan sosial media Anda yang dapat dihubungi seperti: whatsapp, instagram, facebook, dan semacamnya)</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_back">Back</string>
    <string name="label_up_foto">Upload Gambar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>